--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorFront2">#ffffff</color>
     <color name="colorFront3">#cccbcb</color>
     <color name="colorFront4">#e63b3b</color>
+    <color name="colorFront5">#4e4a4a</color>
 </resources>
