--- a/app/src/main/res/layout/page_login.xml
+++ b/app/src/main/res/layout/page_login.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:srcCompat="@drawable/logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -29,9 +29,7 @@
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_toLeftOf="@+id/imageView2"
-        android:layout_toStartOf="@+id/imageView2"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_toStartOf="@+id/imageView2" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,12 +42,12 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorFront1"
-        android:layout_marginLeft="6dp"
-        android:layout_marginStart="6dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2" />
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,12 +60,12 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorFront2"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
         android:layout_below="@+id/imageView2"
         android:layout_toRightOf="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp" />
+        android:layout_toEndOf="@+id/textView1" />
 
 
     <com.google.android.gms.common.SignInButton
