--- a/app/src/main/res/layout/page_register1.xml
+++ b/app/src/main/res/layout/page_register1.xml
@@ -15,11 +15,15 @@
             android:id="@+id/textView2"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:textColor="@color/colorFront3"
+            android:textColor="@color/colorFront5"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/textView8"
-        android:layout_toEndOf="@+id/textView8" />
+        android:layout_alignRight="@+id/textView8"
+        android:layout_alignEnd="@+id/textView8"
+        android:layout_marginRight="9dp"
+        android:layout_marginEnd="9dp" />
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,21 +32,38 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/colorFront3"
-            android:layout_marginTop="9dp"
-            android:layout_below="@+id/textView10"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignBaseline="@+id/textView4"
+            android:layout_alignBottom="@+id/textView4"
+            android:layout_toLeftOf="@+id/textView9"
+            android:layout_toStartOf="@+id/textView9"
+            android:layout_marginRight="7dp"
+            android:layout_marginEnd="7dp" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=">"
-            android:textColor="@color/colorFront3"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_above="@+id/textView5"
-            android:layout_toRightOf="@+id/imageView"
-            android:layout_toEndOf="@+id/imageView" />
+    android:id="@+id/textView4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text=">"
+    android:textColor="@color/colorFront3"
+    android:textSize="30sp"
+    android:textStyle="bold"
+            android:layout_alignBaseline="@+id/textView"
+            android:layout_alignBottom="@+id/textView"
+            android:layout_toRightOf="@+id/textView9"
+            android:layout_toEndOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=">"
+        android:textColor="@color/colorFront3"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/radioGroup"
+        android:layout_toEndOf="@+id/radioGroup"
+        android:layout_marginTop="17dp" />
 
     <TextView
         android:id="@+id/textView5"
