--- a/app/src/main/res/layout/page_register2.xml
+++ b/app/src/main/res/layout/page_register2.xml
@@ -11,13 +11,11 @@
         android:id="@+id/textView2"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/colorFront3"
+        android:textColor="@color/colorFront5"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_toLeftOf="@+id/textView3"
-        android:layout_toStartOf="@+id/textView3"
-        android:layout_marginRight="43dp"
-        android:layout_marginEnd="43dp" />
+        android:layout_toLeftOf="@+id/editText"
+        android:layout_toStartOf="@+id/editText" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,10 +23,12 @@
         android:id="@+id/textView3"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/colorFront3"
-        android:layout_marginTop="25dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_toLeftOf="@+id/textView4"
+        android:layout_toStartOf="@+id/textView4"
+        android:layout_marginRight="36dp"
+        android:layout_marginEnd="36dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -38,24 +38,37 @@
         android:textColor="@color/colorFront3"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp" />
+        android:layout_alignBaseline="@+id/textView5"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_toLeftOf="@+id/textView5"
+        android:layout_toStartOf="@+id/textView5"
+        android:layout_marginRight="34dp"
+        android:layout_marginEnd="34dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=">"
+        android:textColor="@color/colorFront3"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/editText"
+        android:layout_toEndOf="@+id/editText" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="70dp"
         android:layout_height="70dp"
         app:srcCompat="@drawable/date"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp" />
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -122,7 +135,7 @@
         android:id="@+id/textViewWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="กิโลกรรม"
+        android:text="กิโลกรัม"
         android:textColor="@color/colorFront3"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -147,7 +160,7 @@
 
     <Button
         android:id="@+id/button_next_to_page4"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textColor="@color/colorFront2"
         android:text= " Next "
